2001-03-21  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_set_gp): Check sec->output_section
	non-NULL before attempting to dereference.

2001-03-20  H.J. Lu  <hjl@gnu.org>

	* configure.in: Remove the redundent AC_ARG_PROGRAM.
	* configure: Rebuild.

2001-03-20  Andreas Schwab  <schwab@suse.de>

	* elf32-m68k.c (elf_m68k_relocate_section): Don't need the
	relocation value when resolving a reference from a debugging
	section.

2001-03-16  Scott Thomason  <SThomaso@hii.com>

	* coff64-rs6000.c (xcoff64_swap_sym_out): Fix syntax errors.
	(xcoff64_swap_sym_out): Fix syntax errors.

2001-03-16  Richard Sandiford  <rsandifo@redhat.com>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Fix warning.

2001-03-15  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_link_hash_entry): Add maybe_pic_call.
	(hppa_link_hash_newfunc): Init it.
	(hppa_type_of_stub): Only use non-PIC to PIC call stub if caller
	section appears to be non-PIC.
	(final_link_relocate): Likewise.
	(elf32_hppa_adjust_dynamic_symbol): Set maybe_pic_call for any
	possible candidate function, and set pic_call for those that will
	only have a .plt entry for the PIC call stub.
	(hppa_handle_PIC_calls): Set maybe_pic_call.

2001-03-12  DJ Delorie  <dj@redhat.com>

	* elf32-sh.c (sh_elf_relocate_section): Only relocation
	R_SH_DIR8WP* relocs if they're against external symbols, else
	they're just for relaxing.  Validate the reloc values.

2001-03-12  Stefan Geuken <mail@stefan-geuken.de>

	* binary.c (bfd_external_binary_architecture): Declare.
	(binary_object_p): If bfd_external_binary_architecture is defined,
	set the architecture to this string.

2001-03-11  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_finish_dynamic_symbol): Don't make PLT
	entries that could serve as a definition for a weak symbol.

2001-03-08  Nick Clifton  <nickc@redhat.com>

	* Most files: Update copyright notices using Perl script created
	by Kevin Buettner <kevinb@redhat.com>.
	